--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,12 +20,54 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}#about" title="More info on me" class="blog-button">More info</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}#about" title="More about me" class="blog-button">More about me</a></li>
             </ul>
           </nav>
 
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
+
+            {% if site.author.email %}
+              <!-- Email -->
+              <li class="navigation__item">
+                <a href="mailto:{{ site.author.email }}" title="Email {{ site.author.email }}" target="_blank">
+                  <i class="icon icon-mail"></i>
+                  <span class="label">Email</span>
+                </a>
+              </li>
+            {% endif %}
+
+            {% if site.author.linkedin_username %}
+              <!-- LinkedIn -->
+              <li class="navigation__item">
+                <a href="https://www.linkedin.com/in/{{ site.author.linkedin_username }}/en" title="{{ site.author.linkedin_username }} on LinkedIn" target="_blank">
+                  <i class="icon icon-social-linkedin"></i>
+                  <span class="label">LinkedIn</span>
+                </a>
+              </li>
+            {% endif %}
+
+            <!--  TODO UPDATE THE EMAIL-->
+            {% if site.author.pdf_resume %}
+              <!-- Email -->
+              <li class="navigation__item">
+                <a href="/files/resume.pdf" title="PDF Resume" target="_blank">
+                  <i class="icon icon-page-pdf"></i>
+                  <span class="label">PDF Resume</span>
+                </a>
+              </li>
+            {% endif %}
+
+            <!--  TODO UPDATE THE EMAIL-->
+            {% if site.author.word_resume %}
+              <!-- Email -->
+              <li class="navigation__item">
+                <a href="/files/resume.pdf" title="DOC Resume" target="_blank">
+                  <i class="icon icon-page-doc"></i>
+                  <span class="label">DOC Resume</span>
+                </a>
+              </li>
+            {% endif %}
 
             {% if site.author.twitter_username %}
               <!-- Twitter -->
@@ -47,32 +89,12 @@
               </li>
             {% endif %}
 
-            {% if site.author.linkedin_username %}
-              <!-- LinkedIn -->
-              <li class="navigation__item">
-                <a href="https://www.linkedin.com/in/{{ site.author.linkedin_username }}" title="{{ site.author.linkedin_username }} on LinkedIn" target="_blank">
-                  <i class="icon icon-social-linkedin"></i>
-                  <span class="label">LinkedIn</span>
-                </a>
-              </li>
-            {% endif %}
-
             {% if site.author.github_username %}
               <!-- GitHub -->
               <li class="navigation__item">
                 <a href="https://www.github.com/{{ site.author.github_username }}" title="{{ site.author.github_username }} on GitHub" target="_blank">
                   <i class="icon icon-social-github"></i>
                   <span class="label">GitHub</span>
-                </a>
-              </li>
-            {% endif %}
-
-            {% if site.author.email %}
-              <!-- Email -->
-              <li class="navigation__item">
-                <a href="mailto:{{ site.author.email }}" title="Email {{ site.author.email }}" target="_blank">
-                  <i class="icon icon-mail"></i>
-                  <span class="label">Email</span>
                 </a>
               </li>
             {% endif %}
