--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: default
 ---
 <article class="post-container post-container--single">
   <header class="post-header">
-    <div class="post-meta">
+    <!-- <div class="post-meta">
       <time datetime="{{ page.date | date: "%-d %b %Y" }}" class="post-meta__date date">{{ page.date | date: "%-d %b %Y" }}</time> &#8226;
-    </div>
+    </div> -->
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
