--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
             {% if site.author.linkedin_username %}
               <!-- LinkedIn -->
               <li class="navigation__item">
-                <a href="https://www.linkedin.com/in/{{ site.author.linkedin_username }}/en" title="{{ site.author.linkedin_username }} on LinkedIn" target="_blank">
+                <a href="{{ site.links.linkedin_page }}" title="{{ site.author.linkedin_username }} on LinkedIn" target="_blank">
                   <i class="icon icon-social-linkedin"></i>
                   <span class="label">LinkedIn</span>
                 </a>
