- added pdf and html resume

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,6 +51,16 @@
             {% if site.author.pdf_resume %}
               <!-- Email -->
               <li class="navigation__item">
+                <a href="/resume/" title="HTML Resume" target="_blank">
+                  <i class="icon icon-page"></i>
+                  <span class="label">HTML Resume</span>
+                </a>
+              </li>
+            {% endif %}
+
+            {% if site.author.pdf_resume %}
+              <!-- Email -->
+              <li class="navigation__item">
                 <a href="/files/resume.pdf" title="PDF Resume" target="_blank">
                   <i class="icon icon-page-pdf"></i>
                   <span class="label">PDF Resume</span>
