--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,12 +3,12 @@
   <i class="icon icon-x-circle btn-mobile-close__icon hidden"></i>
 </span>
 
-<header class="panel-cover" style="background-image: url({{ "images/cover.jpg" | prepend: site.baseurl }})">
+<header class="panel-cover" style="background-image: url({{ site.baseurl }}/images/cover.jpg)">
   <div class="panel-main">
 
     <div class="panel-main__inner panel-inverted">
     <div class="panel-main__content">
-        <a href="{{ site.baseurl }}" title="link to home of {{ site.title }}">
+        <a href="{{ site.baseurl }}/" title="link to home of {{ site.title }}">
           <!-- <img src="{{ "images/profile.jpg" | prepend: site.baseurl }}" class="user-image" alt="My Profile Photo"> -->
           <h1 class="panel-cover__title panel-title">{{ site.title }}</h1>
         </a>
@@ -20,7 +20,7 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="{{ site.baseurl }}#about" title="More about me" class="blog-button">More about me</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/#about" title="More about me" class="blog-button">More about me</a></li>
             </ul>
           </nav>
 
