--- a/_includes/resumehead.html
+++ b/_includes/resumehead.html
@@ -5,7 +5,8 @@
 <meta name="description" content="James P. Bergin's CV"/>
 <meta charset="UTF-8">
 
-<link type="text/css" rel="stylesheet" href="{{ "css/resumestyle.css" | prepend: site.baseurl }}">
+
+<link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/css/resumestyle.css">
 <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
 
 <!--[if lt IE 9]>
